--- a/index.html
+++ b/index.html
@@ -82,6 +82,40 @@
             </div>
         </div>
 
+        <!-- Project4 start-->
+        <a href="./project/nccuspace.html">
+            <section id="project4" class="project" data-aos="fade-left" data-aos-duration="500" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+                <div class="container card">
+                    <div class="row ">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+
+                            <a class="d-flex justify-content-center" href="./project/nccuspace.html">
+                                <div class="d-flex mb-3 img-mobile"
+                                    style="background-image:url(./img/feature-project/nccuspace/nccuspace_cover.png); background-size: cover; background-repeat: no-repeat;background-position: center;">
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
+                            <div class="project-black mx-3">
+                                <h3 class="keep-all"><strong> NCCUSpace 政大圖書館場地管理系統</strong></World>
+                                </h3>
+                                <p>透過簡單的討論室預約步驟，優化原先預約系統流程，提供一款輕鬆、方便的空間預約體驗。</p>
+                                <h4 class="">#用例分析 #使用者研究 #使用者經驗設計</h4>
+                                <br>
+                                <a href="./project/nccuspace.html" class="btn project-tag" data-wow-delay="1.4s">
+                                    <h4 class="mt-1">了解更多</h4>
+                                </a>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+        </a>
+
         <!-- Project1 start-->
         <a href="./project/pocketWorld.html">
             <section id="project1" class="project" data-aos="fade-right" data-aos-duration="500" data-aos-offset="300"
@@ -96,7 +130,7 @@
                                 <h4 class="">#擴增實境 #使用者研究 #TAICHI Poster</h4>
                                 <br>
                                 <a href="./project/pocketWorld.html" class="btn project-tag" data-wow-delay="1.4s">
-                                    <h4>了解更多</h4>
+                                    <h4 class="mt-1">了解更多</h4>
                                 </a>
 
                             </div>
@@ -143,7 +177,7 @@
                                 <h4 class="">#大數據 #UI設計 </h4>
                                 <br>
                                 <a href="./project/moodlight.html" class="btn project-tag" data-wow-delay="1.4s">
-                                    <h4>了解更多</h4>
+                                    <h4 class="mt-1">了解更多</h4>
                                 </a>
 
                             </div>
@@ -168,7 +202,7 @@
                                 <h4 class="">#資訊架構設計 #UI設計 #使用者研究</h4>
                                 <br>
                                 <a href="./project/exshare.html" class="btn project-tag" data-wow-delay="1.4s">
-                                    <h4>了解更多</h4>
+                                    <h4 class="mt-1">了解更多</h4>
                                 </a>
 
                             </div>
@@ -218,7 +252,7 @@
                                     <h4 class="">#互動設計 #沉浸式劇場 </h4>
                                     <br>
                                     <a href="./project/dream.html" class="btn project-tag" data-wow-delay="1.4s">
-                                        <h4>了解更多</h4>
+                                        <h4 class="mt-1">了解更多</h4>
                                     </a>
 
                                 </div>
@@ -244,7 +278,7 @@
                                     <br>
                                     <a href="./project/createarttalk.html" class=" btn project-tag "
                                         data-wow-delay="1.4s ">
-                                        <h4>了解更多</h4>
+                                        <h4 class="mt-1">了解更多</h4>
                                     </a>
 
                                 </div>
@@ -268,7 +302,7 @@
                             <br>All Rights Reserved.
                         </p>
                     </div>
-                    <ul class="wow fadeInUp social-icon " data-wow-delay="2s ">
+                    <!-- <ul class="wow fadeInUp social-icon " data-wow-delay="2s ">
 
                         <li>
                             <a href="# " class="fa fa-facebook "></a>
@@ -281,7 +315,7 @@
                         <li>
                             <a href="# " class="fab fa-instagram "></a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
 
             </div>
