--- a/project/exshare.html
+++ b/project/exshare.html
@@ -12,7 +12,8 @@
 
     <title>CHING-CHUN</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/templatemo-style.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="project.css">
@@ -39,7 +40,9 @@
         <div class="container px-lg-3">
             <a class="navbar-brand" href="../index.html">
                 <img src="" class="nav-logo">CC</a>
-            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -139,7 +142,8 @@
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>原型</strong></h3>
                         <div class="mx-2 row justify-content-center">
-                            <iframe class="ex-e" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FrlEX6oVkm4iJINvmarodtK%2FWireframing-in-Figma%3Fpage-id%3D0%253A1%26node-id%3D247-3215%26starting-point-node-id%3D247%253A3215%26scaling%3Dscale-down"
+                            <iframe class="ex-e" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+                                src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FrlEX6oVkm4iJINvmarodtK%2FWireframing-in-Figma%3Fpage-id%3D0%253A1%26node-id%3D247-3215%26starting-point-node-id%3D247%253A3215%26scaling%3Dscale-down"
                                 allowfullscreen></iframe>
                         </div>
                     </div>
@@ -179,7 +183,8 @@
                             </ui>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <img class="my-4 img-margin " width="60% " src="../img/feature-project/exshare/storyboard-ex.png " alt="ex.share 故事版 ">
+                            <img class="my-4 img-margin " width="60% "
+                                src="../img/feature-project/exshare/storyboard-ex.png " alt="ex.share 故事版 ">
                         </div>
                     </div>
 
@@ -195,7 +200,8 @@
                             </ui>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <img class="my-4 img-margin " width="100% " src="../img/feature-project/exshare/sitemap-ex.png " alt="ex.share 故事版 ">
+                            <img class="my-4 img-margin " width="100% "
+                                src="../img/feature-project/exshare/sitemap-ex.png " alt="ex.share 故事版 ">
                         </div>
                     </div>
 
@@ -206,7 +212,8 @@
                             </p>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <img class="my-2 img-margin " width="100% " src="../img/feature-project/exshare/lofi-ex.png " alt="ex.share 故事版 ">
+                            <img class="my-2 img-margin " width="100% "
+                                src="../img/feature-project/exshare/lofi-ex.png " alt="ex.share 故事版 ">
                         </div>
                     </div>
 
@@ -217,8 +224,10 @@
                             </p>
                         </div>
                         <div class="img-margin ">
-                            <a href="https://www.figma.com/proto/rlEX6oVkm4iJINvmarodtK/Wireframing-in-Figma?page-id=0%3A1&node-id=0-1&starting-point-node-id=247%3A3215&scaling=scale-down&show-proto-sidebar=1" target="_blank">
-                                <img width="100% " src="../img/feature-project/exshare/figma-ex.png" alt="ex.share figma 設計稿">
+                            <a href="https://www.figma.com/proto/rlEX6oVkm4iJINvmarodtK/Wireframing-in-Figma?page-id=0%3A1&node-id=0-1&starting-point-node-id=247%3A3215&scaling=scale-down&show-proto-sidebar=1"
+                                target="_blank">
+                                <img width="100% " src="../img/feature-project/exshare/figma-ex.png"
+                                    alt="ex.share figma 設計稿">
                             </a>
                         </div>
 
@@ -227,7 +236,7 @@
                             <div class="col-lg-5 col-md-12 col-sm-12 my-auto">
                                 <p class="pt-4 second-heading">
                                     <strong>
-                                         1. 未登入首頁
+                                        1. 未登入首頁
                                     </strong>
                                 </p>
                                 <div class="row list-padding">
@@ -242,7 +251,8 @@
                             </div>
                             <div class="col-lg-7 col-md-12 col-sm-12 mx-auto">
                                 <div class="d-flex justify-content-center ">
-                                    <img class="my-4 img-margin" width="100% " src="../img/feature-project/exshare/login-ex.png" alt="ex.share 未登入首頁">
+                                    <img class="my-4 img-margin" width="100% "
+                                        src="../img/feature-project/exshare/login-ex.png" alt="ex.share 未登入首頁">
                                 </div>
                             </div>
                         </div>
@@ -250,14 +260,15 @@
                         <div class="row justify-content-center my-5 project-reverse">
                             <div class="col-lg-7 col-md-12 col-sm-12 mx-auto">
                                 <div class="d-flex justify-content-center ">
-                                    <img class="mb-3 img-margin" width="100% " src="../img/feature-project/exshare/save-ex.png" alt="ex.share 收藏頁">
+                                    <img class="mb-3 img-margin" width="100% "
+                                        src="../img/feature-project/exshare/save-ex.png" alt="ex.share 收藏頁">
                                 </div>
                             </div>
                             <div class="col-lg-1 "></div>
                             <div class="col-lg-4 col-md-12 col-sm-12 my-auto">
                                 <p class="pt-4 second-heading">
                                     <strong>
-                                         2. 會員中心 - 我的收藏
+                                        2. 會員中心 - 我的收藏
                                     </strong>
                                 </p>
                                 <div class="content-black">
@@ -270,7 +281,7 @@
                             <div class="col-lg-5 col-md-12 col-sm-12 my-auto">
                                 <p class="pt-4 second-heading">
                                     <strong>
-                                         3. 會員中心 - 個人頁面
+                                        3. 會員中心 - 個人頁面
                                     </strong>
                                 </p>
                                 <div class="content-black">
@@ -279,7 +290,8 @@
                             </div>
                             <div class="col-lg-7 col-md-12 col-sm-12 mx-auto">
                                 <div class="d-flex justify-content-center ">
-                                    <img class="mb-3 img-margin" width="100% " src="../img/feature-project/exshare/individual-ex.png" alt="ex.share 個人頁面">
+                                    <img class="mb-3 img-margin" width="100% "
+                                        src="../img/feature-project/exshare/individual-ex.png" alt="ex.share 個人頁面">
                                 </div>
                             </div>
                         </div>
@@ -287,14 +299,15 @@
                         <div class="row justify-content-center my-5 project-reverse">
                             <div class="col-lg-7 col-md-12 col-sm-12 mx-auto">
                                 <div class="d-flex justify-content-center ">
-                                    <img class="mb-3 img-margin" width="100% " src="../img/feature-project/exshare/account-ex.png" alt="ex.share 帳戶設定">
+                                    <img class="mb-3 img-margin" width="100% "
+                                        src="../img/feature-project/exshare/account-ex.png" alt="ex.share 帳戶設定">
                                 </div>
                             </div>
                             <div class="col-lg-1 "></div>
                             <div class="col-lg-4 col-md-12 col-sm-12 my-auto">
                                 <p class="pt-4 second-heading">
                                     <strong>
-                                         4. 會員中心 - 帳號設定
+                                        4. 會員中心 - 帳號設定
                                     </strong>
                                 </p>
                                 <div class="content-black">
@@ -307,7 +320,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12 ">
                                 <p class="pt-4 second-heading">
                                     <strong>
-                                         5. 文章經驗頁 （上傳/瀏覽）
+                                        5. 文章經驗頁 （上傳/瀏覽）
                                     </strong>
                                 </p>
                                 <div class="content-black">
@@ -316,12 +329,14 @@
                             </div>
                             <div class="col-lg-6 col-md-12 col-sm-12 mx-auto">
                                 <div class="d-flex justify-content-center ">
-                                    <img class="mb-2 img-margin" width="100% " src="../img/feature-project/exshare/upload-ex.png" alt="ex.share 上傳經驗格式頁">
+                                    <img class="mb-2 img-margin" width="100% "
+                                        src="../img/feature-project/exshare/upload-ex.png" alt="ex.share 上傳經驗格式頁">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-12 col-sm-12 mx-auto">
                                 <div class="d-flex justify-content-center ">
-                                    <img class="img-margin" width="100% " src="../img/feature-project/exshare/article-ex.png" alt="ex.share 文章瀏覽">
+                                    <img class="img-margin" width="100% "
+                                        src="../img/feature-project/exshare/article-ex.png" alt="ex.share 文章瀏覽">
                                 </div>
                             </div>
                         </div>
@@ -334,7 +349,7 @@
                         </div>
                         <p class="pt-4 second-heading">
                             <strong>
-                                 1. 質化研究 - 任務測試
+                                1. 質化研究 - 任務測試
                             </strong>
                         </p>
                         <div class="row list-padding mb-3">
@@ -352,7 +367,7 @@
 
                         <p class="pt-4 second-heading">
                             <strong>
-                                 2. 量化研究 - <span>SUS (System usability Scale)</span>
+                                2. 量化研究 - <span>SUS (System usability Scale)</span>
                             </strong>
                         </p>
                         <div class="content-black ">
@@ -361,12 +376,13 @@
                             </p>
                         </div>
                         <div class="d-flex justify-content-center ">
-                            <img class="mb-3" width="60% " src="../img/feature-project/exshare/sus-ex.png" alt="ex.share SUS 易用性測試">
+                            <img class="mb-3" width="60% " src="../img/feature-project/exshare/sus-ex.png"
+                                alt="ex.share SUS 易用性測試">
                         </div>
 
                         <p class="pt-4 second-heading">
                             <strong>
-                                 3. 測試結果
+                                3. 測試結果
                             </strong>
                         </p>
                         <div class="content-black ">
@@ -409,10 +425,12 @@
                 <div class="row justify-content-center mt-5 ">
                     <div class="col-lg-8 row ">
                         <div class="text-start col-3 ">
-                            <a class="py-1 go-tag " onclick="self.location.href='../index.html' " value="回首頁 "><span>回首頁</span></a>
+                            <a class="py-1 go-tag " onclick="self.location.href='../index.html' "
+                                value="回首頁 "><span>回首頁</span></a>
                         </div>
                         <div class="text-end col-9 ">
-                            <a class="py-1 go-tag " onclick="self.location.href='pocketWorld.html' "><span>NEXT | Pocket World AR</span></a>
+                            <a class="py-1 go-tag " onclick="self.location.href='nccuspace.html' "><span>NEXT |
+                                    NCCUSpace</span></a>
                         </div>
                     </div>
                 </div>
@@ -421,38 +439,40 @@
         </section>
 
 
-        </div>
+    </div>
 
 
 
 
-        <!-- Footer Section -->
+    <!-- Footer Section -->
 
-        <footer>
-            <div class="container ">
-                <div class="row ">
+    <footer>
+        <div class="container ">
+            <div class="row ">
 
-                    <div class="col-md-12 col-sm-12 ">
-                        <div class="wow fadeInUp footer-copyright " data-wow-delay="1.8s ">
-                            <p>Copyright &copy; 2023 HSU, CHING-CHUN
-                                <br>All Rights Reserved.
-                            </p>
-                        </div>
-
+                <div class="col-md-12 col-sm-12 ">
+                    <div class="wow fadeInUp footer-copyright " data-wow-delay="1.8s ">
+                        <p>Copyright &copy; 2023 HSU, CHING-CHUN
+                            <br>All Rights Reserved.
+                        </p>
                     </div>
 
                 </div>
+
             </div>
-        </footer>
+        </div>
+    </footer>
 
 
-        <!-- SCRIPTS -->
+    <!-- SCRIPTS -->
 
-        <script src="./project.js "></script>
-        <script src="../js/custom.js "></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
-        <script src="../js/lite-yt-embed.js "></script>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
+    <script src="./project.js "></script>
+    <script src="../js/custom.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js "
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous ">
+    </script>
+    <script src="../js/lite-yt-embed.js "></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
 <script src="js/sketch.js "></script> -->
 </body>
 
