--- a/about.html
+++ b/about.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="chingchun">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="chingchun" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
 
     <title>CHING-CHUN</title>
-    <link rel="icon" type="image/png" href="img/fav-icon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/templatemo-style.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-</head>
+    <link rel="icon" type="image/png" href="img/fav-icon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/templatemo-style.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+  </head>
 
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-
-
+  <body
+    data-spy="scroll"
+    data-target=".navbar-collapse"
+    data-offset="50"
+    style="
+      background: linear-gradient(
+        270deg,
+        hsla(0, 0%, 89%, 1) 0%,
+        hsla(0, 0%, 100%, 1) 100%
+      );
+    "
+  >
     <!-- PRE LOADER -->
 
     <!-- <div class="preloader">
@@ -31,119 +51,146 @@
         </div>
     </div> -->
 
-
     <!-- Navigation Section -->
 
-    <div class=" custom-navbar navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container px-lg-3">
-            <a class="navbar-brand" href="index.html">
-                <img src="" class="nav-logo ">CC</a>
-            <button class="navbar-toggler navbar-toggler-right navbar-style" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
-                    <li class="nav-item px-2"><a class="nav-link active" href="#">About</a></li>
-                </ul>
-            </div>
+    <div
+      class="custom-navbar navbar navbar-expand-lg navbar-light fixed-top"
+      id="mainNav"
+    >
+      <div class="container px-lg-3">
+        <a class="navbar-brand" href="index.html">
+          <img src="" class="nav-logo" />CC</a
+        >
+        <button
+          class="navbar-toggler navbar-toggler-right navbar-style"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ms-auto my-2 my-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Portfolio</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link active" href="#">About</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
 
     <!-- About Section -->
 
     <section id="about" class="project my-3">
-        <div class="container">
-            <div class="row project-center">
-                <div class="col-lg-5 col-md-12 col-sm-12 my-auto about-photo">
-                    <img style="width: 100%;" class="center " src="./img/about/about-me.jpg" alt="HSU CHING CHUN">
+      <div class="container">
+        <div class="row project-center">
+          <div class="col-lg-6 col-md-12 col-sm-12 project-intro">
+            <div class="mx-3">
+              <h3 class="project-title">
+                <strong
+                  >哈囉，我是許青純<i class="bi bi-emoji-smile"></i
+                ></strong>
+              </h3>
+              <p>
+                在過往的學習過程中，我發現我很喜歡研究人，於是投身於研究互動設計、人機互動領域，探討人與物之間互動的感受、想法與行為，因此正在成為設計師的路途中努力著~
+              </p>
+              <div class="my-3">
+                <p class="border-bottom">學歷</p>
+                <table class="table table-borderless">
+                  <tbody>
+                    <tr>
+                      <th class="fst-italic" scope="row">2023 -</th>
+                      <td>國立政治大學</td>
+                      <td>數位內容碩士學程</td>
+                    </tr>
+                    <tr>
+                      <th class="fst-italic" scope="row">2018-2022</th>
+                      <td>國立臺灣大學</td>
+                      <td>
+                        圖書資訊學系 <br />
+                        輔 生物產業傳播技發展學系 <br />
+                        資訊設計與視覺敘事領域專長 <br />
+                        傳播學程
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="row mt-5">
+                <div class="text-start col-6">
+                  <a
+                    class="resume-btn"
+                    href="./pdf/resume_chingchun.pdf"
+                    target="_blank"
+                    >Resume</a
+                  >
                 </div>
+                <div class="text-end col-6 pb-1">
+                  <a
+                    href="https://www.facebook.com/cherry.she.5/"
+                    target="_blank"
+                    class="bi bi-facebook"
+                  ></a>
 
-                <div class="col-lg-6 col-md-12 col-sm-12 project-intro">
-
-                    <div class="project-black mx-3">
-                        <h3 class="project-title"><strong>哈囉，我是許青純<i class="bi bi-emoji-smile"></i></strong>
-                        </h3>
-                        <div class="my-3">
-                            <p class="border-bottom">學歷</p>
-                            <table class="table table-borderless">
-                                <tbody>
-                                    <tr>
-                                        <th class="fst-italic" scope="row">2023 -</th>
-                                        <td>國立政治大學</td>
-                                        <td>數位內容碩士學程</td>
-                                    </tr>
-                                    <tr>
-                                        <th class="fst-italic" scope="row">2018-2022</th>
-                                        <td>國立臺灣大學</td>
-                                        <td>圖書資訊學系 <br>
-                                            輔 生物產業傳播技發展學系 <br>
-                                            資訊設計與視覺敘事領域專長 <br>
-                                            傳播學程
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <p>在過往的學習過程中，我發現我很喜歡研究人，於是投身於研究互動設計、人機互動領域，探討人與物之間互動的感受、想法與行為，因此正在成為設計師的路途中努力著~</p>
-                        </div>
-                        <div class="row mt-5">
-                            <div class="text-start col-6">
-                                <a class="resume-btn" href="./pdf/resume_chingchun.pdf" target="_blank">Resume</a>
-                            </div>
-                            <div class="text-end col-6 pb-1">
-                                <a href="https://www.facebook.com/cherry.she.5/" target="_blank"
-                                    class="bi bi-facebook"></a>
-
-                                <!-- <i class="bi bi-envelope-fill"></i> -->
-                                <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
-                                <a href="mailto: chiharu.hsu@gmail.com" class="bi bi-envelope"></a>
-                            </div>
-                        </div>
-
-                    </div>
+                  <!-- <i class="bi bi-envelope-fill"></i> -->
+                  <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
+                  <a
+                    href="mailto: chiharu.hsu@gmail.com"
+                    class="bi bi-envelope"
+                  ></a>
                 </div>
-
+              </div>
             </div>
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-4 col-md-12 col-sm-12 my-auto about-photo">
+            <img
+              style="width: 100%"
+              class="center"
+              src="./img/about/about.jpg"
+              alt="HSU CHING CHUN"
+            />
+          </div>
         </div>
+      </div>
     </section>
-
-
 
     <!-- Footer Section -->
 
     <footer>
-        <div class="container ">
-            <div class="row ">
-
-                <div class="col-md-12 col-sm-12 ">
-                    <div class="wow fadeInUp footer-copyright " data-wow-delay="1.8s ">
-                        <p>Copyright &copy; 2023 HSU, CHING-CHUN
-                            <br>All Rights Reserved.
-                        </p>
-                    </div>
-
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+            <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s ">
+              <p>
+                Copyright &copy; 2023 HSU, CHING-CHUN <br />All Rights Reserved.
+              </p>
             </div>
+          </div>
         </div>
+      </div>
     </footer>
     <!-- <div class="">
         <a href="https://www.facebook.com/cherry.she.5/" target="_blank" class="bi bi-facebook"></a>
         <a href="mailto: chiharu.hsu@gmail.com" class="bi bi-envelope"></a>
     </div> -->
 
-
     <!-- SCRIPTS -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
     <script src="./js/custom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js "
-        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous ">
-    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js "
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N "
+      crossorigin="anonymous "
+    ></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
 <script src="js/sketch.js "></script> -->
-</body>
-
+  </body>
 </html>
