--- a/project/exshare.html
+++ b/project/exshare.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>CHING-CHUN</title>
-
+    <link rel="icon" type="image/png" href="../img/fav-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/templatemo-style.css">
@@ -429,8 +429,8 @@
                                 value="回首頁 "><span>回首頁</span></a>
                         </div>
                         <div class="text-end col-9 ">
-                            <a class="py-1 go-tag " onclick="self.location.href='nccuspace.html' "><span>NEXT |
-                                    NCCUSpace</span></a>
+                            <a class="py-1 go-tag " onclick="self.location.href='laushu.html' "><span>NEXT |
+                                    Laushu</span></a>
                         </div>
                     </div>
                 </div>
