feat: about & laushu

--- a/project/laushu.html
+++ b/project/laushu.html
@@ -196,13 +196,15 @@
               <p>
                 針對公司發送勞報單給外包人員流程優化設計：包含新建外包人員、建立勞報單、合併勞報單
               </p>
-              <iframe
-                style="border: 1px solid rgba(0, 0, 0, 0.1)"
-                width="800"
-                height="450"
-                src="https://embed.figma.com/proto/GBcu5mv0yQ62kpiwUFLGPW/%E7%AC%AC%E4%B8%80%E7%B5%84_%E5%8B%9E%E8%B4%96--%E4%BD%9C%E5%93%81%E9%9B%86%E7%94%A8-?page-id=406%3A23021&node-id=431-44944&p=f&viewport=378%2C381%2C0.28&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=495%3A182891&show-proto-sidebar=1&embed-host=share"
-                allowfullscreen
-              ></iframe>
+              <div class="mx-2 row justify-content-center">
+                <iframe
+                  style="border: 1px solid rgba(0, 0, 0, 0.1)"
+                  width="800"
+                  height="450"
+                  src="https://embed.figma.com/proto/GBcu5mv0yQ62kpiwUFLGPW/Laushu-%E5%8B%9E%E8%B4%96--%E4%BD%9C%E5%93%81%E9%9B%86%E7%94%A8-?page-id=46%3A34099&node-id=431-44944&p=f&viewport=691%2C366%2C0.16&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=495%3A182891&show-proto-sidebar=1&embed-host=share"
+                  allowfullscreen
+                ></iframe>
+              </div>
             </div>
           </div>
         </div>
