--- a/about.html
+++ b/about.html
@@ -52,115 +52,115 @@
     </div> -->
 
     <!-- Navigation Section -->
-
-    <div
-      class="custom-navbar navbar navbar-expand-lg navbar-light fixed-top"
-      id="mainNav"
-    >
-      <div class="container px-lg-3">
-        <a class="navbar-brand" href="index.html">
-          <img src="" class="nav-logo" />CC</a
-        >
-        <button
-          class="navbar-toggler navbar-toggler-right navbar-style"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Portfolio</a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link active" href="#">About</a>
-            </li>
-          </ul>
+    <div class="">
+      <div
+        class="custom-navbar navbar navbar-expand-lg navbar-light fixed-top"
+        id="mainNav"
+      >
+        <div class="container px-lg-3">
+          <a class="navbar-brand" href="index.html">
+            <img src="" class="nav-logo" />CC</a
+          >
+          <button
+            class="navbar-toggler navbar-toggler-right navbar-style"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Portfolio</a>
+              </li>
+              <li class="nav-item px-2">
+                <a class="nav-link active" href="#">About</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- About Section -->
+      <!-- About Section -->
 
-    <section id="about" class="project my-3">
-      <div class="container">
-        <div class="row project-center">
-          <div class="col-lg-6 col-md-12 col-sm-12 project-intro">
-            <div class="mx-3">
-              <h3 class="project-title">
-                <strong
-                  >哈囉，我是許青純<i class="bi bi-emoji-smile"></i
-                ></strong>
-              </h3>
-              <p>
-                在過往的學習過程中，我發現我很喜歡研究人，於是投身於研究互動設計、人機互動領域，探討人與物之間互動的感受、想法與行為，因此正在成為設計師的路途中努力著~
-              </p>
-              <div class="my-3">
-                <p class="border-bottom">學歷</p>
-                <table class="table table-borderless">
-                  <tbody>
-                    <tr>
-                      <th class="fst-italic" scope="row">2023 -</th>
-                      <td>國立政治大學</td>
-                      <td>數位內容碩士學程</td>
-                    </tr>
-                    <tr>
-                      <th class="fst-italic" scope="row">2018-2022</th>
-                      <td>國立臺灣大學</td>
-                      <td>
-                        圖書資訊學系 <br />
-                        輔 生物產業傳播技發展學系 <br />
-                        資訊設計與視覺敘事領域專長 <br />
-                        傳播學程
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div class="row mt-5">
-                <div class="text-start col-6">
-                  <a
-                    class="resume-btn"
-                    href="./pdf/resume_chingchun.pdf"
-                    target="_blank"
-                    >Resume</a
-                  >
+      <section id="about" class="project my-3">
+        <div class="container">
+          <div class="about-content row project-center">
+            <div class="col-lg-6 col-md-12 col-sm-12 project-intro">
+              <div class="mx-3">
+                <h3 class="project-title">
+                  <strong
+                    >哈囉，我是許青純<i class="bi bi-emoji-smile"></i
+                  ></strong>
+                </h3>
+                <p>
+                  在過往的學習過程中，我發現我很喜歡研究人，於是投身於研究互動設計、人機互動領域，探討人與物之間互動的感受、想法與行為，因此正在成為設計師的路途中努力著~
+                </p>
+                <div class="my-3">
+                  <p class="border-bottom">學歷</p>
+                  <table class="table table-borderless">
+                    <tbody>
+                      <tr>
+                        <th class="fst-italic" scope="row">2023 -</th>
+                        <td>國立政治大學</td>
+                        <td>數位內容碩士學程</td>
+                      </tr>
+                      <tr>
+                        <th class="fst-italic" scope="row">2018-2022</th>
+                        <td>國立臺灣大學</td>
+                        <td>
+                          圖書資訊學系 <br />
+                          輔 生物產業傳播技發展學系 <br />
+                          資訊設計與視覺敘事領域專長 <br />
+                          傳播學程
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
-                <div class="text-end col-6 pb-1">
-                  <a
-                    href="https://www.facebook.com/cherry.she.5/"
-                    target="_blank"
-                    class="bi bi-facebook"
-                  ></a>
+                <div class="row mt-5">
+                  <div class="text-start col-6">
+                    <a
+                      class="resume-btn"
+                      href="./pdf/resume_chingchun.pdf"
+                      target="_blank"
+                      >Resume</a
+                    >
+                  </div>
+                  <div class="text-end col-6 pb-1">
+                    <a
+                      href="https://www.facebook.com/cherry.she.5/"
+                      target="_blank"
+                      class="bi bi-facebook"
+                    ></a>
 
-                  <!-- <i class="bi bi-envelope-fill"></i> -->
-                  <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
-                  <a
-                    href="mailto: chiharu.hsu@gmail.com"
-                    class="bi bi-envelope"
-                  ></a>
+                    <!-- <i class="bi bi-envelope-fill"></i> -->
+                    <!-- <a href="https://www.instagram.com/hsu_ching_chun/" target="_blank" class="bi bi-instagram"></a> -->
+                    <a
+                      href="mailto: chiharu.hsu@gmail.com"
+                      class="bi bi-envelope"
+                    ></a>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-1"></div>
-          <div class="col-lg-4 col-md-12 col-sm-12 my-auto about-photo">
-            <img
-              style="width: 100%"
-              class="center"
-              src="./img/about/about.jpg"
-              alt="HSU CHING CHUN"
-            />
+            <div class="col-lg-1"></div>
+            <div class="col-lg-4 col-md-12 col-sm-12 my-auto about-photo">
+              <img
+                style="width: 100%"
+                class="center"
+                src="./img/about/about.jpg"
+                alt="HSU CHING CHUN"
+              />
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-
+      </section>
+    </div>
     <!-- Footer Section -->
 
     <footer>
