--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <a href="./project/laushu.html">
           <section
             id="project5"
-            class="project"
+            class="project justify-content-center"
             data-aos="fade-right"
             data-aos-duration="500"
             data-aos-offset="300"
@@ -118,7 +118,9 @@
           >
             <div class="container card">
               <div class="row project-reverse">
-                <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
+                <div
+                  class="col-lg-6 col-md-6 col-sm-12 project-intro border-right"
+                >
                   <div class="mx-5">
                     <h3 class="keep-all"><strong>Laushu 勞贖</strong></h3>
                     <p>
@@ -144,7 +146,7 @@
                     href="./project/laushu.html"
                   >
                     <div
-                      class="d-flex mb-3 img-mobile project-black"
+                      class="d-flex mb-3 img-mobile"
                       style="
                         background-image: url(./img/feature-project/laushu/laushu_cover.png);
                         background-size: contain;
@@ -189,7 +191,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="project-black mx-3">
+                  <div class="mx-3">
                     <h3 class="keep-all">
                       <strong> NCCUSpace 政大圖書館場地管理系統</strong>
                     </h3>
@@ -250,7 +252,7 @@
                     href="./project/pocketWorld.html"
                   >
                     <div
-                      class="d-flex mb-3 img-mobile project-black"
+                      class="d-flex mb-3 img-mobile"
                       style="
                         background-image: url(./img/feature-project/pocketworld/pocket-cover-mobile.png);
                         background-size: contain;
@@ -299,7 +301,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="project-black mx-3">
+                  <div class="mx-3">
                     <h3 class="keep-all"><strong> MoodLight 心晴</strong></h3>
                     <p>
                       結合大數據應用，透過快樂日記與快樂清單推薦，有效排解使用者負面情緒，給予自癒能量。
@@ -358,7 +360,7 @@
                     href="./project/exshare.html"
                   >
                     <div
-                      class="d-flex mb-3 img-mobile project-black"
+                      class="d-flex mb-3 img-mobile"
                       style="
                         background-image: url(./img/feature-project/exshare/cover-ex.png);
                         background-size: contain;
@@ -412,7 +414,7 @@
                   ></div>
                 </a>
                 <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
-                  <div class="project-black mx-3">
+                  <div class="mx-3">
                     <h3 class="keep-all">
                       <strong>A Dream Within a Dream 夢中夢</strong>
                     </h3>
@@ -457,7 +459,7 @@
                   ></div>
                 </a>
                 <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
-                  <div class="project-black mx-3">
+                  <div class="mx-3">
                     <h3 class="keep-all">
                       <strong>CreateArtTalk 藝擴體工作室</strong>
                     </h3>
