--- a/about.html
+++ b/about.html
@@ -94,7 +94,9 @@
               <div class="mx-3">
                 <h3 class="project-title">
                   <strong
-                    >哈囉，我是許青純<i class="bi bi-emoji-smile"></i
+                    >哈囉，我是許青純 HSU, CHING CHUN<i
+                      class="bi bi-emoji-smile"
+                    ></i
                   ></strong>
                 </h3>
                 <p>
@@ -102,7 +104,19 @@
                 </p>
                 <div class="my-3">
                   <p class="border-bottom">學歷</p>
-                  <table class="table table-borderless">
+                  <div>
+                    <p>國立政治大學 數位內容碩士學程 2023-</p>
+                  </div>
+
+                  <p>國立臺灣大學 圖書資訊學系 2018-2022</p>
+                  <div class="mx-3">
+                    <p>
+                      輔系 生物產業傳播技發展學系<br />資訊設計與視覺敘事領域專長
+                      <br />傳播學程
+                    </p>
+                  </div>
+
+                  <!-- <table class="table table-borderless">
                     <tbody>
                       <tr>
                         <th class="fst-italic" scope="row">2023 -</th>
@@ -120,7 +134,7 @@
                         </td>
                       </tr>
                     </tbody>
-                  </table>
+                  </table> -->
                 </div>
                 <div class="row mt-5">
                   <div class="text-start col-6">
