feat: about flip

--- a/about.html
+++ b/about.html
@@ -164,12 +164,30 @@
             </div>
             <div class="col-lg-1"></div>
             <div class="col-lg-4 col-md-12 col-sm-12 my-auto about-photo">
-              <img
-                style="width: 100%"
-                class="center"
-                src="./img/about/about.jpg"
-                alt="HSU CHING CHUN"
-              />
+              <div class="flip-card mx-auto">
+                <!--卡片最外層-->
+                <div class="flip-card-container">
+                  <!--包裝卡片正反面的容器-->
+                  <div class="front">
+                    <!--卡片正面-->
+                    <img
+                      style="width: 100%"
+                      class="center"
+                      src="./img/about/about.jpg"
+                      alt="HSU CHING CHUN"
+                    />
+                  </div>
+                  <div class="back">
+                    <!--卡片反面-->
+                    <img
+                      style="width: 100%"
+                      class="center"
+                      src="./img/about/about-back.jpg"
+                      alt="HSU CHING CHUN"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
