style: index css

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
     </section>
     <!-- Home Section end-->
 
-    <section id="portfolio">
+    <section id="portfolio" class="mx-auto">
       <!--Featured Project Section start-->
       <div class="container">
         <div id="heading-section">
           <h4 class="heading">精選專案 FEATURED PROJECTS</h4>
         </div>
       </div>
-      <div class="mx-3">
+      <section id="feature-project" class="mx-3">
         <!-- Project5 start-->
         <a href="./project/laushu.html">
           <section
@@ -118,9 +118,7 @@
           >
             <div class="container card">
               <div class="row project-reverse">
-                <div
-                  class="col-lg-6 col-md-6 col-sm-12 project-intro border-right"
-                >
+                <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
                   <div class="mx-5">
                     <h3 class="keep-all"><strong>Laushu 勞贖</strong></h3>
                     <p>
@@ -191,7 +189,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-3">
+                  <div class="mx-5">
                     <h3 class="keep-all">
                       <strong> NCCUSpace 政大圖書館場地管理系統</strong>
                     </h3>
@@ -301,7 +299,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
-                  <div class="mx-3">
+                  <div class="mx-5">
                     <h3 class="keep-all"><strong> MoodLight 心晴</strong></h3>
                     <p>
                       結合大數據應用，透過快樂日記與快樂清單推薦，有效排解使用者負面情緒，給予自癒能量。
@@ -366,6 +364,7 @@
                         background-size: contain;
                         background-repeat: no-repeat;
                         background-position: center;
+                        width: 120vw;
                       "
                     ></div>
                   </a>
@@ -377,7 +376,7 @@
             </div>
           </section>
         </a>
-      </div>
+      </section>
 
       <!--Special Project Section start-->
       <div class="container">
@@ -389,7 +388,7 @@
         <div class="container px-0">
           <div class="row mx-auto project-center justify-content-center">
             <div
-              class="card col-lg-5 col-md-8 col-sm-12"
+              class="card col-lg-5 col-md-8 col-sm-12 mx-auto"
               data-aos="fade-down"
               data-aos-duration="500"
               data-aos-offset="300"
@@ -410,11 +409,12 @@
                       background-size: cover;
                       background-repeat: no-repeat;
                       background-position: center;
+                      width: 70vw;
                     "
                   ></div>
                 </a>
                 <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
-                  <div class="mx-3">
+                  <div class="mx-5">
                     <h3 class="keep-all">
                       <strong>A Dream Within a Dream 夢中夢</strong>
                     </h3>
@@ -455,11 +455,12 @@
                       background-size: cover;
                       background-repeat: no-repeat;
                       background-position: center;
+                      width: 70vw;
                     "
                   ></div>
                 </a>
                 <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
-                  <div class="mx-3">
+                  <div class="mx-5">
                     <h3 class="keep-all">
                       <strong>CreateArtTalk 藝擴體工作室</strong>
                     </h3>
