--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
     <!-- Home Section end-->
 
-    <section id="portfolio" class="mx-auto">
+    <section id="portfolio">
       <!--Featured Project Section start-->
       <div class="container">
         <div id="heading-section">
